sample/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: sample
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: http
